filerestserver/overlays/staging/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-rsrv
spec:
  replicas: 3
