filerestserver/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files-rsrv-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cluster-issuer"

spec:
  tls:
    - hosts:
      - videorsrv.10.201.2.221.nip.io
      secretName: files-rsrv-tls

  rules:
    - host: filesrsrv.10.201.2.221.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: files-rsrv-svc
                port:
                  number: 9095
